--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: TinyML Swarm Intelligence Journey
 description: My 12-month path to PhD research in distributed machine learning
 author: sharris416
-email: your-email@example.com
+email: steve@employinginnovation.com
 url: "https://sharris416.github.io"
 
 # Theme
