--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: TinyML Swarm Intelligence Journey
-description: My 12-month path to PhD research in distributed machine learning
+title: TinyML Swarm Research
+description: My 12-month path to expand my knowledge of distributed machine learning
 author: sharris416
 email: steve@employinginnovation.com
 url: "https://sharris416.github.io"
